# home_office_essentials

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyrightconfig.json
apps/be-app/: .env.example  README.md  main.py  package.json  pyproject.toml
apps/be-app/data/: mock_users.json  todos.json
apps/be-app/src/: __init__.py  config.py  main.py
apps/be-app/src/adapter/di/: container.py
apps/be-app/src/adapter/gateways/: mock_user_file_gateway.py  todo_file_gateway.py
apps/be-app/src/adapter/web/: error_mapping.py  exception_handlers.py  fastapi.py  routers.py
apps/be-app/src/adapter/web/middleware/: auth.py
apps/be-app/src/adapter/web/schemas/: todo.py  user.py
apps/be-app/src/application/gateways/: i_todo_gateway.py  i_user_gateway.py
apps/be-app/src/application/usecases/: auth.py
apps/be-app/src/application/usecases/todo/: list_todos.py
apps/be-app/src/common/: context.py  errors.py  roles.py
apps/be-app/src/enterprise/entities/: user.py
apps/fe-app/: README.md  package.json
apps/fe-app/app/: layout.tsx  page.tsx
apps/fe-app/src/app/: layout.tsx  page.tsx
apps/fe-app/src/app/forbidden/: page.tsx
apps/fe-app/src/app/login/: page.tsx
apps/fe-app/src/app/new/: page.tsx
apps/fe-app/src/components/: app-shell.tsx
apps/fe-app/src/constants/: todos.ts
apps/fe-app/src/contexts/: session-context.tsx  todo-context.tsx
apps/fe-app/src/hooks/: useTodoList.ts
apps/fe-app/src/lib/: api-client.ts  errors.ts  query-client-provider.tsx  session-manager.ts
apps/fe-app/src/types/: todo.ts
